# libuvc

./: .gitignore  CMakeLists.txt  README.md  cmake-linux.sh  cmake-windows.bat  libuvcConfig.cmake
cmake/: FindLibUSB.cmake
include/libuvc/: libuvc.h  libuvc_internal.h
src/: ctrl-gen.cpp  ctrl-gen.py  ctrl.cpp  device.cpp  diag.cpp  example.cpp  frame-mjpeg.cpp  frame.cpp  init.cpp  misc.cpp  stream.cpp  test.cpp
